refactor(ai): streamline multi-agent pipeline and recommendation service code